old_tests/tests/lean/pp_shadowed_const.lean.expected.out
pp_shadowed_const.lean:1:55: error: don't know how to synthesize placeholder
context:
bool : ℕ
⊢ _root_.bool → _root_.bool = _root_.bool
def g : 1 == 1 → 1 == 1 :=
λ (heq_1 : 1 == 1), heq.symm heq_1
pp_shadowed_const.lean:7:39: error: don't know how to synthesize placeholder
context:
n : ℕ
⊢ pred n = n
pp_shadowed_const.lean:8:42: error: don't know how to synthesize placeholder
context:
pred : ℕ
⊢ nat.pred pred = pred
pp_shadowed_const.lean:9:48: error: don't know how to synthesize placeholder
context:
pred nat : ℕ
⊢ _root_.nat.pred pred = nat
